networking/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    app.kubernetes.io/part-of: videostreamingplatform
---
apiVersion: v1
kind: Namespace
metadata:
  name: videostreamingplatform
  labels:
    app.kubernetes.io/part-of: videostreamingplatform
---
apiVersion: v1
kind: Namespace
metadata:
  name: analytics
  labels:
    app.kubernetes.io/part-of: videostreamingplatform
---
apiVersion: v1
kind: Namespace
metadata:
  name: recommendations
  labels:
    app.kubernetes.io/part-of: videostreamingplatform
